# pokabot

./: .gitignore  Cargo.toml  diesel.toml  openai.py  pokabot.db  run_pokabot.sh
data/: members.csv
migrations/2023-03-30-143423_create_table_name/: up.sql
migrations/2023-03-31-002332_create_news_table/: up.sql
src/: chatgpt.rs  helper.rs  main.rs  models.rs  schema.rs  scraper.rs  twitter.rs
src/scraper/: blog.rs  mod.rs  news.rs  scraper.rs
