[package]
name = "pokabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json", "multipart"] }
base64 = "0.13.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_derive = "1.0.0"
chrono = "0.4.19"
percent-encoding = "2.1.0"
hmac-sha1 = "0.1.3"
dotenv = "0.15.0"
tokio = { version = "1.17", features = ["full"] }
scraper = "0.15.0"
urlencoding = "2.1.2"
regex = "1.6.0"
bytes = "1.4.0"
hex = "0.4.3"
url = "2.3.1"
